cmake_minimum_required(VERSION 3.21)
project(cpp_practice)

set(CMAKE_CXX_STANDARD 23)

add_executable(cpp_practice main.cpp test.cpp "Chapter 1/1.20.cpp" "Chapter 1/1.21.cpp" "Chapter 1/1.22.cpp" "Chapter 1/1.23.cpp" "Chapter 1/1.25.cpp" "Chapter 1/1.24.cpp" "Chapter 1/1.3.cpp" "Chapter 1/1.4.cpp" "Chapter 1/1.5.cpp" "Chapter 1/1.6.cpp" "Chapter 1/1.7.cpp" "Chapter 1/1.8.cpp" "Chapter 1/1.9.cpp" "Chapter 1/1.10.cpp" "Chapter 1/1.11.cpp")
